Release 2.8.1 - ????

   * Allow pretty printing in FileSystemEmitter (TIKA-4034).


Release 2.8.0 - 5/9/2023

   * Enable counting and/or parsing of incremental updates in PDFs.  This
     is an experimental feature and may change in later releases (TIKA-4017).

   * Fixed bug that failed to load the CompositeExternalParser in tika-app and
     tika-server-standard. This fix will call exiftool and ffmpeg if those are installed, as was
     the behavior in Tika 1.x. Exclude org.apache.tika.parser.external.CompositeExternalParser
     if you do not want this behavior (TIKA-4022).

   * Add detection for and a new mime type for older postscript-based
     Adobe Illustrator "application/illustrator+ps" files (TIKA-3971).

   * Add magic detection for canon raw file types: crw, cr2 and cr3 (TIKA-3991).

   * Add detection for ONIX message files (TIKA-4011).

   * Add detection and a parser for ActiveMime files (TIKA-3987).

   * Add extraction of rendition layout value and version from Epub (TIKA-4013).

   * Improve embedded file extraction from PDFs (TIKA-4012).

   * Improve metadata extraction from WARCs (TIKA-4018).

   * Update to PDFBox 2.0.28 (TIKA-4016).

   * Users may now avoid the ZeroByteFileException via a
     setting on the AutoDetectParserConfig (TIKA-3976).

   * Fix bug in closing <a> elements in the presence of <b> elements
     in RTF files (TIKA-3972).

   * Improve extraction of embedded file names in .docx (TIKA-3968).

   * Normalize author, title, subject and description to their Dublin Core
     properties in the HTMLParser (TIKA-3963).


Release 2.7.0 - 1/31/2023

   * Add SVG detection for svg files that lack the xml header (TIKA-3308).

   * Migrate to a live fork of Universal Charset Detector (TIKA-3213).

   * Improve handling of text-based attachments inside .eml files (TIKA-3959).

   * Add tika-parser-nlp-package to release artifacts (TIKA-3958).

   * Remove need for <params/> element in classes that extend ConfigBase (TIKA-3946).
